--- a/style.css
+++ b/style.css
@@ -11,17 +11,20 @@ html {
 }
 
 #root{
-  width: 560px;
+  width: 50%;
   height: auto;
   margin: 0 auto;
 }
 p{
+ 
+  width:88%;
   font-size: 18px;
   text-align: justify;
   line-height: 30px;
 }
 
 h2{
+ 
   width: 100%;
   height: 50px;
   line-height: 50px;
@@ -31,6 +34,7 @@ h2{
   text-align: center;
 }
 img{
+ 
   width: 550px;
   height: auto;
   background-color: aquamarine;
@@ -85,4 +89,12 @@ img{
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
+}
+#select-input {
+  float: right;
+  padding: 6px;
+  border: none;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
 }
