new-select-update-400

--- a/style.css
+++ b/style.css
@@ -100,7 +100,17 @@ img{
 }
 
 
-#select-input1 {
+#select-episode {
+  float: right;
+  padding: 6px;
+  border: none;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
+}
+
+
+#select-show {
   float: right;
   padding: 6px;
   border: none;
